ingress/v3/ocpu.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deployment-notitia-ocpu
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: notitia-ocpu
    spec:
      containers:
      - name: notitia-ocpu
        image: canaantt/notitia-ocpu:latest
        ports:
        - name: ocpu-port
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ocpu
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30304
    targetPort: ocpu-port
    protocol: TCP
    name: http
  selector:
    app: notitia-ocpu
